--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="lib/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <title>Appsus</title>
+    <title>Simple Pen</title>
   </head>
   <!--  -->
   <body>
