--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="lib/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Simple Pen</title>
+    <link rel="icon" href="assets/img/pen.png" type="image/png">
   </head>
-  <!--  -->
+
+  <!-- <img src="assets/img/pen.png" alt=""> -->
+
   <body>
     <div id="root"></div>
 
